@@ -1,4 +1,3 @@
 SUBDIRS = gendef atkmm pangomm gdkmm gtkmm demos examples
 
-EXTRA_DIST = gtkmm.sln \
-             README
+EXTRA_DIST = blank.cpp gtkmm.sln README
