@@ -34,7 +34,7 @@ END
 #endif    // APSTUDIO_INVOKED
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,6,@GTKMM_MICRO_VERSION@,1
+ FILEVERSION @GTKMM_MAJOR_VERSION@,@GTKMM_MINOR_VERSION@,@GTKMM_MICRO_VERSION@,1
  PRODUCTVERSION @GTKMM_MAJOR_VERSION@,@GTKMM_MINOR_VERSION@,@GTKMM_MICRO_VERSION@,1
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
@@ -52,7 +52,7 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "The gtkmm development team (see AUTHORS)"
             VALUE "FileDescription", "The official C++ wrapper for atk"
-            VALUE "FileVersion", "1.6.@GTKMM_MICRO_VERSION@"
+            VALUE "FileVersion", "@VERSION@"
             VALUE "LegalCopyright", "Distribution is under the LGPL (see COPYING)"
             VALUE "OriginalFilename", "atkmm-1.6"
             VALUE "ProductName", "gtkmm"
