@@ -1,3 +1,10 @@
+2005-03-10  Cedric Gustin <cedric.gustin@swing.be>
+
+	* MSVC_Net2003/Makefile.am: Add blank.cpp to EXTRA_DIST.
+	* MSVC_Net2003/atkmm/atkmm.rc.in,
+	MSVC_Net2003/pangomm/pangomm.rc.in: Use gtkmm @VERSION@ as version
+	string.
+
 2.6.0:
 
 2005-03-04  Murray Cumming  <murrayc@murrayc.com>
